cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

SET(PROJECTNAME NearestNeighborLookup)
PROJECT(${PROJECTNAME})

SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(OpenCV_STATIC OFF)


SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	"${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")


FILE(GLOB SOURCES src/*.cpp src/*.h src/*.hpp src/*.glsl)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(ASSIMP REQUIRED)
FIND_PACKAGE(PCL)

SET(LIBRARIES 
	${OpenCV_LIBS}
	${ASSIMP_LIBRARIES}
	${PCL_LIBRARIES}
	)
	
INCLUDE_DIRECTORIES(
	${OpenCV_INCLUDE_DIRS}
	${ASSIMP_INCLUDE_DIR}
	${PCL_INCLUDE_DIRS}
)

link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

ADD_EXECUTABLE(${PROJECTNAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)